--- a/templates/article/base.html
+++ b/templates/article/base.html
@@ -14,13 +14,17 @@
 
 {% block content_out %}
     <article>
-        <header>{% block headline %}{% endblock %}</header>
-        <section class="article-content content-wrapper">{% block content %}{% endblock %}</section>
+        <header>
+            {% block headline %}{% endblock %}
+        </header>
+        <section class="article-content content-wrapper">
+            {% block content %}{% endblock %}
+        </section>
     </article>
 {% endblock %}
 
 {% block sidebar %}
-<aside class="sidebar mobile-menu-hide">
-	{% block headline-actions %}{% endblock %}
-</aside>
+	<aside class="sidebar mobile-menu-hide">
+		{% block sidebar_actions %}{% endblock %}
+	</aside>
 {% endblock %}
