--- a/templates/article/index_member.html
+++ b/templates/article/index_member.html
@@ -1,47 +1,55 @@
 {% extends "article/index.html" %}
 {% load humanize %}
 
-{% block headline-actions-filter %}
-    <h3><span class="wide">Filtres</span></h3>
-    <li><a href="{% url "zds.member.views.articles" %}">All</a></li>
-    <li><a href="{% url "zds.member.views.articles" %}?type=public">Public</a></li>
-    <li><a href="{% url "zds.member.views.articles" %}?type=draft">Draft</a><li>
+
+
+{% block sidebar_filter %}
+    <li><a href="{% url "zds.member.views.articles" %}">Tous</a></li>
+    <li><a href="{% url "zds.member.views.articles" %}?type=public">Publié</a></li>
+    <li><a href="{% url "zds.member.views.articles" %}?type=draft">Brouillon</a><li>
 {% endblock %}
 
-{% block content-filter %}
-    {% if type = 'public' and article.on_line %}
-        <a href="{{ article.get_absolute_url_online }}">{{ article.title }}</a>
-    {% else %}
-        <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
-    {% endif %}
+
+
+{# FIXME : ce code ne sert a priori à rien #}
+{% comment %}
+{% block content_filter %}
+    <a href="
+        {% if type = 'public' and article.on_line %}
+            {{ article.get_absolute_url_online }}
+        {% else %}
+            {{ article.get_absolute_url }}
+        {% endif %}
+    ">
+        {{ article.title }}
+    </a>
 {% endblock %}
+{% endcomment %}
+
 
 {% block content %}
-
-<div class="row">
-    <div class="large-12 columns">
-        {% if articles %}
-            <div class="article-items">
-                {% for article in articles %}
+    {% if articles %}
+        <div class="article-items">
+            {% for article in articles %}
                 <article>
                     <a href="{{ article.get_absolute_url }}">
                         {% if article.image %}
-                        <img src="{{article.image.thumb.url }}" alt="" class="article-img avatar"/>
+                            <img src="{{ article.image.thumb.url }}" alt="" class="article-img avatar">
                         {% endif %}
+
                         <div class="article-infos">
                             <h3>{{ article.title }}</h3>
                             <p class="article-metadata">
-                                crée {{article.create_at|naturaltime}}
+                                Crée {{ article.create_at|naturaltime }}
                             </p>
                         </div>
                     </a>
                 </article>
-                {% endfor %}
-            </div>
-        {% else %}
-            <p>Aucun article disponible.</p>
-        {% endif %}
-    </div>
-</div>
-
+            {% endfor %}
+        </div>
+    {% else %}
+        <p>
+            Aucun article disponible.
+        </p>
+    {% endif %}
 {% endblock %}
