--- a/templates/forum/topic.html
+++ b/templates/forum/topic.html
@@ -1,7 +1,7 @@
 {% extends "forum/base.html" %}
 {% load emarkdown %}
-{% load humane_date %}
 {% load profile %}
+{% load humanize %}
 {% load staticfiles %}
 {% load crispy_forms_tags %}
 
@@ -101,11 +101,11 @@
                     {% endif %}
 
                     <div class="message-metadata left">
-                        <a href="#p{{ post.pk }}" class="date">{{ post.pubdate|humane_date }}</a>
+                        <a href="#p{{ post.pk }}" class="date">{{ post.pubdate|naturaltime }}</a>
                         {% if not post.is_visible %}
                             <i>Masqué par {{ post.editor }} : {{ post.text_hidden }}</i>
                         {% elif not post.update = None %}
-                            <i>(Edité {{ post.update|humane_date }} par {{ post.editor }} )</i>
+                            <i>(Edité {{ post.update|naturaltime }} par {{ post.editor }} )</i>
                         {% endif %}
                     </div>
                 <div class="large-12 columns">
@@ -142,7 +142,7 @@
             <div class="row">
                 <div class="large-12 columns">
                     <div class="alert-box alert">
-                        <a href="{% url "zds.member.views.details" alert.author.username %}">{{alert.author}}</a> - {{alert.pubdate|humane_date}} : {{alert.text}}
+                        <a href="{% url "zds.member.views.details" alert.author.username %}">{{alert.author}}</a> - {{alert.pubdate|naturaltime}} : {{alert.text}}
                     </div>
                 </div>
             </div>
