--- a/templates/mp/index.html
+++ b/templates/mp/index.html
@@ -1,5 +1,4 @@
 {% extends "mp/base.html" %}
-{% load humane_date %}
 {% load upfirstletter %}
 
 {% block title %}
@@ -70,7 +69,7 @@
                         {% if answer %}
                             Dernière rép.
                             <a href="{{ answer.get_absolute_url }}" class="hide-for-small">
-                                {% with date=answer.pubdate|humane_date %}
+                                {% with date=answer.pubdate|naturaltime %}
                                     {{ date }}
                                 {% endwith %}
                             </a>
