--- a/templates/mp/topic.html
+++ b/templates/mp/topic.html
@@ -1,6 +1,5 @@
 {% extends "mp/base_read.html" %}
 {% load emarkdown %}
-{% load humane_date %}
 {% load profile %}
 {% load staticfiles %}
 {% load crispy_forms_tags %}
@@ -68,11 +67,11 @@
                     {% endif %}
 
                     <div class="message-metadata left">
-                        <a href="#p{{ post.pk }}" class="date">{{ post.pubdate|humane_date }}</a>
+                        <a href="#p{{ post.pk }}" class="date">{{ post.pubdate|naturaltime }}</a>
                         {% if not post.is_visible %}
                             <i>Masqué par {{ post.editor }} : {{ post.text_hidden }}</i>
                         {% elif not post.update = None %}
-                            <i>(Edité {{ post.update|humane_date }} par {{ post.editor }} )</i>
+                            <i>(Edité {{ post.update|naturaltime }} par {{ post.editor }} )</i>
                         {% endif %}
                     </div>
                 <div class="large-12 columns">
